2009-09-09  Tatsuro Matsuoka <tmacchant@yahoo.co.jp>

	* plot/gnuplot_drawnow.m: Avoid flickering windows by avoding
	'set multiplot' / 'unset multiplot' for gnuplot's windows and
	wxt terminals.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__dogleg__.m: Revert to revision 22c8272af34b.
	* optimization/__doglegm__.m: New source.
	* optimization/fminunc.m: Use it.

2009-09-08  John W. Eaton  <jwe@octave.org>

	* io/dlmwrite.m: Fix typo.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Change initial TR step strategy.
	* optimization/fminunc.m: Change initial TR step strategy.

2009-09-08  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: Correct extra output params handling.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Update initial factor.
	* optimization/fminunc.m: Update initial factor.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* general/arrayfun.m: Fix test.

2009-09-05  John W. Eaton  <jwe@octave.org>

	* plot/hold.m: Correctly toggle hold state.  Set both figure and
	axes "nextplot" property when turning hold state on.
	* plot/ishold.m: Check figure and axes nextplot properties.
	Accept axes or figure handle argument.

2009-09-01  Christophe Tournery  <christophe.tournery@illusonic.com>

	* audio/wavread.m: Rename data_size from obsolete ck_size.

2009-08-31  David Bateman  <dbateman@free.fr>

	* general/quadgk.m: More care with the interval length and
	convergence of contour integrals.

2009-08-29  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Add missing semicolon.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>

	* general/int2str.m: Convert to double before calling log10.

2009-08-26  E. Joshua Rigler  <relgire@gmail.com>

	* time/datestr.m: Set tm.isdst to -1 before calling mktime.

2009-08-25  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_open_stream__.m: Save pid in __plot_stream__ property.